# finance_agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  PAIN_POINT.md  README.md  _seed_dev.py  alembic.ini  fly.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: protect-files.sh
.codex/: hooks.json
.codex/hooks/: protect-files.py
.github/workflows/: ci.yml  daily.yml  deploy-dashboard.yml
app/: config.py  db.py  main.py  models.py  runner.py
app/collector/: base.py  edgar_docs.py  finnhub.py  marketaux.py  naver.py  opendart_docs.py  rss.py
app/embed/: __init__.py  benchmark.py
app/llm/: __init__.py  factory.py  gateway.py
app/pipeline/: citations.py  coingecko.py  dedup.py  dictionary.py  digest.py  embed.py  impact.py  openai_citations.py  openai_digest.py  opendart.py  openfigi.py  pipeline.py  prompt_versions.py  sec.py  seed.py  ticker_link.py
app/web/: chat.py  openai_chat.py  queries.py  render.py
docs/: STAGE1.5_DESIGN.md  STAGE1.5_OPERATIONS.md  STAGE1_DASHBOARD_REDESIGN.md  STAGE1_DASHBOARD_SPEC.md  STAGE1_DESIGN.md  STAGE2_UI_REFRESH.md  STAGE2_UI_RESEARCH.md  STAGE2_UI_REVIEW.md
docs/context/: 20260618-164904-finance-agent-design-office-hours.md  20260618-210612-stage1-stack-decisions.md  20260618-212325-stage1-gates-resolved.md  20260618-213812-stage1-docs-commit-push.md  20260619-082635-stage1-scaffold-tests-green.md  20260619-092900-stage1-migration-db-verified.md  20260619-094722-stage1-cleanup-committed.md  20260619-102441-stage1-rss-connector-simhash-dedup.md  (+25 more)
migrations/: env.py
scripts/: analyze_prompt_runs.py  backfill_impact_score.py  build_digest_for.py  compare_providers.py  crontab.example  run_daily.cmd  run_pipeline_for.py  schedule_daily.cmd  validate_keys.py
tests/: conftest.py  test_citations.py  test_codex_hooks.py  test_coingecko.py  test_dedup.py  test_dictionary.py  test_digest.py  test_digest_view.py  test_edgar_docs.py  test_embed.py  test_factory.py  test_finnhub.py  test_freshness.py  test_gateway.py  test_health.py  test_impact.py  test_integration_stage15.py  test_marketaux.py  test_naver.py  test_openai_chat.py  test_openai_citations.py  test_openai_digest.py  test_opendart.py  test_opendart_docs.py  test_openfigi.py  test_pipeline.py  test_prompt_versions.py  test_qa_regressions.py  test_rag_chat.py  test_rss.py  test_runner.py  test_sec.py  test_seed.py  test_swap.py  test_ticker_link.py  test_ticker_precision.py  test_web.py
(+38 files in other folders)
