[project]
name = "finance-agent"
version = "0.1.0"
description = "애널리스트 리서치 가속기 — Stage 1 증거 브리프 대시보드"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic",
    "pgvector",
    "psycopg[binary]",
    "pydantic-settings",
    "httpx",
    "anthropic",
    "truststore>=0.10.4",
    "markdown>=3.10.2",
]

# 임베딩(bge-m3 등)은 opt-in: uv sync --extra embeddings (코어 uv sync는 가볍게 유지).
[project.optional-dependencies]
embeddings = ["sentence-transformers>=3"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
