[project]
name = "finance-agent"
version = "0.1.0"
description = "애널리스트 리서치 가속기 — Stage 1 증거 브리프 대시보드"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic",
    "pgvector",
    "psycopg[binary]",
    "pydantic-settings",
    "httpx",
    # openai는 gateway가 직접 씀(litellm.responses 예외 계열도 openai). anthropic 호출은
    # litellm.anthropic 네이티브 브리지 경유라 anthropic SDK 직접 의존 없음(플랜 11).
    "openai",
    # 정확 핀: 주간 릴리스 회귀 잦음 + top-level 파라미터 화이트리스트(output_config 포함)
    # 검증 버전(플랜 11). 업그레이드는 별도 PR + compare 스모크 재실행.
    "litellm==1.91.0",
    "truststore>=0.10.4",
    "markdown>=3.10.2",
]

# 임베딩(bge-m3 등)은 opt-in: uv sync --extra embeddings (코어 uv sync는 가볍게 유지).
[project.optional-dependencies]
embeddings = ["sentence-transformers>=3"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
